# wiki4codes

./: .gitignore  README.md
.devcontainer_dev/java8-env/: Dockerfile
ML/cv/object_detection/py_example_venv/: requirements.txt
ML/cv/opencv_examples/: CMakeLists.txt  ocr.cpp
ML/cv/opencv_examples/archives/demo0/: main.cpp
ML/cv/opencv_examples/archives/demo1/: CMakeLists.txt  main.cpp
ML/cv/opencv_examples/archives/demo2/: CMakeLists.txt
ML/cv/opencv_examples/archives/demo3/: CMakeLists.txt
ML/recsys/mf/: .gitignore  Dockerfile  README.md  fast_kmeans.py  main.py  requirements.txt
ML/recsys/mf/scripts/: build.sh  build_dev_images.sh  run_dev_container.sh
dev_templates/cmake/cmake_vcpkg_template/: CMakeLists.txt  main.cpp  vcpkg.json  vcpkg.json.bak
incubator/fearank/: CMakeLists.txt
lib_and_frameworks/PyO3/PyO3/: README.md  setup.py
lib_and_frameworks/PyO3/PyO3/extensions/rust/: Cargo.toml
lib_and_frameworks/QT/cpp/: CMakeLists.txt  README.md  adv_screenshot.cpp  multi_frame.cpp  screen_shot.cpp
lib_and_frameworks/ShopRunner/collie/: README.md  demo.py  requirements.txt
lib_and_frameworks/TextRank4ZH/: README.md  example.py
lib_and_frameworks/WiseLibs/better-sqlite3/: README.md  index.js  package-lock.json  package.json
lib_and_frameworks/apache/flink/: cmds4flink.sh
lib_and_frameworks/apache/flink/flink-examples/: README.md  pom.xml
lib_and_frameworks/boostorg/beast/: CMakeLists.txt  README.md  vcpkg.json  ws_example.cpp  wss_binance_example.cpp
lib_and_frameworks/ccxt/ccxt/python/: README.md  example.py  requirements.txt
lib_and_frameworks/cpm-cmake/CPM.cmake/: CMakeLists.txt
lib_and_frameworks/crypto-chassis/ccapi/: CMakeLists.txt  subscriber_demo.cpp  subscriber_demo_v0.cpp
lib_and_frameworks/detectron2/: demo.py  example.py  requirements.txt
lib_and_frameworks/detectron2/vhelper/common/: __init__.py
lib_and_frameworks/detectron2/vhelper/dataset/coco/: en_label2cn_label.py  id2label.py
lib_and_frameworks/detectron2/vhelper/detectron2/: DetectronModelConfig.py  __init__.py  utils.py
lib_and_frameworks/detectron2/vhelper/predictor/: __init__.py
lib_and_frameworks/dmlc/dgl/: README.md  pypack.json  requirements.txt
lib_and_frameworks/flairNLP/flair/: README.md  zh_ner_example.py
lib_and_frameworks/flutter/flutter/: README.md
lib_and_frameworks/flutter/flutter/example_0/: README.md  pubspec.yaml
lib_and_frameworks/flutter/flutter/example_0/linux/: CMakeLists.txt  my_application.cc
lib_and_frameworks/flutter/flutter/example_0/test/: widget_test.dart
lib_and_frameworks/flutter/flutter/example_0/web/: index.html  manifest.json
lib_and_frameworks/flutter/flutter/example_0/windows/: CMakeLists.txt
lib_and_frameworks/flutter/flutter/example_1_native_cpp_integrated/: README.md  ffigen.yaml  pubspec.yaml
lib_and_frameworks/flutter/flutter/example_1_native_cpp_integrated/android/: build.gradle  settings.gradle
lib_and_frameworks/flutter/flutter/example_1_native_cpp_integrated/example/: README.md  pubspec.yaml
lib_and_frameworks/flutter/flutter/example_1_native_cpp_integrated/linux/: CMakeLists.txt
lib_and_frameworks/flutter/flutter/example_1_native_cpp_integrated/src/: CMakeLists.txt  example_1_native_cpp_integrated.c
lib_and_frameworks/google/benchmark/: CMakeLists.txt  example.cpp
lib_and_frameworks/google/googletest/: CMakeLists.txt  example.cpp
lib_and_frameworks/grpc/grpc/cpp/cmake_vcpkg/: CMakeLists.txt  helloworld_client.cpp  helloworld_server.cpp
lib_and_frameworks/locustio/locust/: README.md  fake_serv.py  locustfile.py  requirements.txt
lib_and_frameworks/nardew/talipp/: Makefile  base_examples.py  build.sh  requirements.txt
lib_and_frameworks/pallets/flask/: README.md  flask_classful_demo.py  requirements.txt
lib_and_frameworks/protocolbuffers/protobuf/cpp/: CMakeLists.txt  server.cpp
lib_and_frameworks/pybind11/: CMakeLists.txt
lib_and_frameworks/pybind11/include/: header.h
lib_and_frameworks/reo7sp/tgbot-cpp/: CMakeLists.txt  main.cpp  vcpkg.json
lib_and_frameworks/stanfordnlp/stanza/: corenlp_client_zh_demo.py  ner_demo.py  pypack.json  requirements.txt
lib_and_frameworks/tdlib/: README.md
lib_and_frameworks/tdlib/td/: CMakeLists.txt  examples.cpp
programming_lang/cpp/cmake/ExternalProject_example/: CMakeLists.txt  example.cpp
programming_lang/cpp/cmake_vcpkg/: CMakeLists.txt  CMakeLists.txt.bak.1  example.cpp  vcpkg.json
programming_lang/cpp/cpp_c_api/: CMakeLists.txt  README.md  calculator.cpp  calculator.hpp  calculator_c_wrapper.cpp  calculator_c_wrapper.h  calculator_run.c
programming_lang/cpp/cpp_c_api/verification/: build_and_run.sh  c_calculator.c
programming_lang/python/cffi_example/c_src/: types.h
programming_lang/rust/common/: Cargo.toml
programming_lang/rust/common/.cargo/: config
programming_lang/rust/common/src/: main.rs
wiki4codes/ML/CV/opencv_examples/: CMakeLists.txt  example.cpp  ocr.cpp
wiki4codes/ML/CV/opencv_examples/archives/: README.md
wiki4codes/ML/CV/opencv_examples/archives/demo0/: CMakeLists.txt
wiki4codes/ML/CV/opencv_examples/archives/demo2/: main.cpp
wiki4codes/ML/CV/opencv_examples/archives/demo3/: main.cpp
wiki4codes/ML/CV/opencv_examples/incubator/cvkit/: ocr.h
wiki4codes/ML/CV/opencv_examples/incubator/cvkit/img_processing/: common.h
wiki4codes/ML/CV/opencv_examples/incubator/cvkit/img_processing/ocr/: ops.h
wiki4codes/lib_and_frameworks/QT/cpp/: button.cpp  first_program.cpp  grid_layout.cpp  hello_world.cpp  img_viewer.cpp
wiki4codes/lib_and_frameworks/TextRank4ZH/: requirements.txt
wiki4codes/lib_and_frameworks/detectron2/: README.md
wiki4codes/lib_and_frameworks/pybind11/: README.md  main.cpp  test.py
wiki4codes/lib_and_frameworks/pybind11/include/: header1.h
wiki4codes/lib_and_frameworks/pybind11/src/: pybinder.cpp  src.cpp  src1.cpp
wiki4codes/lib_and_frameworks/redis-py-cluster/: README.md  demo.py  requirements.txt
wiki4codes/lib_and_frameworks/stanza/: requirements.txt
wiki4codes/python/cffi_example/: example.py  pyproject.toml
wiki4codes/python/cffi_example/c_src/: funcs.h
(+47 files in other folders)
